--- a/content/post/2020_11_18.md
+++ b/content/post/2020_11_18.md
@@ -7,12 +7,13 @@ tag = "ミリシタ"
 author = "飴雨"
 +++
 
-![イベントビジュアル](images/20201118_1.jpg)
+![イベントビジュアル](https://amemas.github.io/post/images/20201118_1.jpg)
 
 来ました、ホラー系イベント…！  
 ミリシタはしっかりホラーをやってくれるところが大好き、ホラー系イベントは絶対走る飴雨Pです。
 
 ---
+
 　2週間ほど前の内容になってしまいますが、せっかく記録をとったので備忘録的な形で書き記しておきます。  
 　なお、この記事は実際にプレイした楽曲を全て記載していますので非常に長く読みづらくなっていると思います。今まさにイベントを走ってらっしゃる方にはおすすめできない記事となっています。  
 イベントが落ち着いたらまたお越しください。  
@@ -22,25 +23,29 @@ author = "飴雨"
 ---
 
 
-#結果
-![イベント結果](images/20201118_2.jpg)
+<h2>結果</h2>
+
+![イベント結果](https://amemas.github.io/post/images/20201118_2.jpg)
 
 2400位付近を狙っていたんですが、意外と走ってしまった。  
 でも正直イベントが終わって、2500位に入れてないんじゃないかとヒヤヒヤしてたので一安心です。
 
 
-#初期装備
-![所持アイテム1日目](images/20201118_3.jpg)
+<h2>初期装備</h2>
+
+![所持アイテム1日目](https://amemas.github.io/post/images/20201118_3.jpg)
 
 　前回走ったイベントが今年の8月上旬に開催された「プラチナスターチューン〜BORN ON DREAM!〜」なので、そこから3ヶ月くらいでこれくらいのアイテムが溜まってました。  
 
-#実際に走ってみた  
+<h2>実際に走ってみた</h2>  
+
 プレイ曲数、難易度、曲名、その他の情報をメモしています。  
 太字の曲名はイベント曲で、赤字になっている曲は5倍が確定したときのイベント曲となっています。  
 「確定以外で×5.0倍ってこれくらいの確率で出るのか〜」的な見方をしてもらえると良いかと思います。
 
-##10/20（1日目）
-![プレイ曲1日目](images/20201118_4.jpg)
+<h3>10/20（1日目）</h3>  
+
+![プレイ曲1日目](https://amemas.github.io/post/images/20201118_4.jpg)
 9曲目をプレイしてるときに「次イベント走るときの参考に曲のプレイ数とかメモしておけばいいじゃん」って思ったので8曲目から上の情報がいろいろ曖昧です。プレイ数は消費した元気から逆算しました。  
 この日は30曲プレイ。
 
@@ -50,8 +55,7 @@ author = "飴雨"
 
 ---
 
-##10/21（2日目）
-
+<h3>10/21（2日目）</h3>
 
 ---
 
@@ -65,17 +69,18 @@ author = "飴雨"
 - ジュエル（+325個）
 
 ---
-![プレイ曲2日目_1](images/20201118_5.jpg)
-![プレイ曲2日目_2](images/20201118_6.jpg)
+
+![プレイ曲2日目_1](https://amemas.github.io/post/images/20201118_5.jpg)
+![プレイ曲2日目_2](https://amemas.github.io/post/images/20201118_6.jpg)
 
 2日目です。  
 この日の0時時点でイベントポイントは7976Pt、イベントポイントランキングは2982位でした。
 
 そして千鶴さんの誕生日ですね。めでたい🎉  
-![千鶴さんの誕生日](images/20201118_7.jpg)
+![千鶴さんの誕生日](https://amemas.github.io/post/images/20201118_7.jpg)
 
 あと私事ですが、PランクがSSになりました。めでたい🎉 
-![ランクアップ](images/20201118_8.jpg) 
+![ランクアップ](https://amemas.github.io/post/images/20201118_8.jpg) 
 
 この日は1日目よりも少し多く曲をプレイしたくらいで、特に記載することはありません。
 
@@ -86,7 +91,7 @@ author = "飴雨"
 ---
 
 
-##10/22（3日目）
+<h3>10/22（3日目）</h3>
 
 ---
 
@@ -100,8 +105,8 @@ author = "飴雨"
 
 ---
 
-![プレイ曲3日目_1](images/20201118_9.jpg)
-![プレイ曲3日目_2](images/20201118_10.jpg)
+![プレイ曲3日目_1](https://amemas.github.io/post/images/20201118_9.jpg)
+![プレイ曲3日目_2](https://amemas.github.io/post/images/20201118_10.jpg)
 
 レベルがあがって元気最大値も増えました。スパドリMAXとかジュエルを使った時に影響が出るので嬉しい限りです。  
 プレイ曲数も日に日に増えていきます。
@@ -112,7 +117,7 @@ author = "飴雨"
 
 ---
 
-##10/23（4日目）
+<h3>10/23（4日目）</h3>
 
 ---
 
@@ -125,8 +130,8 @@ author = "飴雨"
 
 ---
 
-![プレイ曲4日目_1](images/20201118_11.jpg)
-![プレイ曲4日目_2](images/20201118_12.jpg)
+![プレイ曲4日目_1](https://amemas.github.io/post/images/20201118_11.jpg)
+![プレイ曲4日目_2](https://amemas.github.io/post/images/20201118_12.jpg)
 
 4日目です。  
 イベント曲のMMを25回クリアしたのでジュエル集めのために6Mも回ります。
@@ -137,7 +142,7 @@ author = "飴雨"
 
 ---
 
-##10/24（5日目）
+<h3>10/24（5日目）</h3>
 
 ---
 
@@ -152,8 +157,8 @@ author = "飴雨"
 
 ---
 
-![プレイ曲5日目_1](images/20201118_13.jpg)
-![プレイ曲5日目_2](images/20201118_14.jpg)
+![プレイ曲5日目_1](https://amemas.github.io/post/images/20201118_13.jpg)
+![プレイ曲5日目_2](https://amemas.github.io/post/images/20201118_14.jpg)
 
 折り返し地点で元気消費2倍でプレイすることが出来るようになりました。  
 ここからは基本元気消費2倍でプレイしていきます。
@@ -165,7 +170,7 @@ author = "飴雨"
 
 ---
 
-##10/25（6日目）
+<h3>10/25（6日目）</h3>
 
 ---
 
@@ -180,21 +185,21 @@ author = "飴雨"
 
 ---
 
-![プレイ曲6日目_1](images/20201118_15.jpg)
-![プレイ曲6日目_2](images/20201118_16.jpg)
-![プレイ曲6日目_3](images/20201118_17.jpg)
+![プレイ曲6日目_1](https://amemas.github.io/post/images/20201118_15.jpg)
+![プレイ曲6日目_2](https://amemas.github.io/post/images/20201118_16.jpg)
+![プレイ曲6日目_3](https://amemas.github.io/post/images/20201118_17.jpg)
 
 6日目は実験的な事をしてみました。  
 
 ① 課題曲と5倍のイベント曲が被ったので、イベント曲の方を優先してプレイしてみる。
-![イベント曲優先](images/20201118_18.jpg)
+![イベント曲優先](https://amemas.github.io/post/images/20201118_18.jpg)
 
 こういう状態です。  
 　5倍の状態になったら、元気を消費して出来るライブやお仕事をしても進捗度が上昇しません。ということで、5倍のイベント曲の方を先にさばいていってみることにしました。  
 
 結果  
 その後課題曲はx1.2倍のところに来ることはなく、x1.0倍のところに居座り続けた。
-![イベント曲優先の結果](images/20201118_19.jpg)  
+![イベント曲優先の結果](https://amemas.github.io/post/images/20201118_19.jpg)  
 
 最終的にこの日の80曲目でx1.0倍でプレイしました。
 　x1.2倍でプレイしてもx1.0倍でプレイしても、一曲プレイするだけなら獲得ポイントの差は微々たるものなのであまり関係ないかもしれませんが、個人的にx1.0倍でプレイするのは精神衛生上よろしくないので今後は課題曲優先でプレイしていこうと思います。
@@ -202,20 +207,20 @@ author = "飴雨"
 ② イベント曲をプレイするためのユニット編成を変更した。
 
 オーバークロック持ちとオーバーロンド持ちを入れた編成でプレイしてみたんですが…
-![コンティニュー](images/20201118_20.jpg)  
+![コンティニュー](https://amemas.github.io/post/images/20201118_20.jpg)  
 
 いぇいっ！  
 見事死亡しました。この日の63曲目のことです。  
 　普段自傷系スキル持ちを二人入れてもライフこんなに減ることはめったにない＆なぜか終盤でミスしてしまうのダブルコンボでジュエルが減ってしまいました。地味に痛い……
 
-![死亡後のリザルト画面](images/20201118_21.jpg)  
+![死亡後のリザルト画面](https://amemas.github.io/post/images/20201118_21.jpg)  
 頑張りすぎです……
 
 ③ 進捗度について  
 
 5倍確定の状態になるまでの進捗度の話です。  
 　進捗度は40の状態からスタートして、MMのライブまたはお仕事をすると進捗度が6上昇、6Mでは5上昇、4Mでは4上昇して、2Mでは3上昇（消費元気2倍でプレイすると進捗度もそれぞれ2倍になります）といった仕様になっています。
-![進捗度](images/20201118_22.jpg)  
+![進捗度](https://amemas.github.io/post/images/20201118_22.jpg)  
 
 　そして、5倍確定の状態になってからイベント曲をプレイすると進捗度がリセットされてまた40からスタートします。  
 また、このイベントを走ってて初めて気づいたのですが、進捗度の繰越はされないという仕様があったんですね……。だから進捗度ジャスト40で5倍を迎えようが、進捗度48で5倍を迎えようが、進捗度がリセットされるときにはかならず40からスタートします。  
@@ -228,7 +233,7 @@ author = "飴雨"
 元のMM3回とMM一回を元気1倍消費のプレイスタイルに戻しました。  
 
 というのも、
-![進捗度の結果](images/20201118_23.jpg)  
+![進捗度の結果](https://amemas.github.io/post/images/20201118_23.jpg)  
 
 　左がMM、右が6Mでプレイしたときの獲得イベントptの違いです。（4Mのスクショは撮るの忘れました）  
 　MMと6Mですが獲得できるポイントの差が結構あります。これを何回も続けたらポイント効率的に良くないなと思って4Mを挟むプレイスタイルはやめました。
@@ -244,7 +249,7 @@ author = "飴雨"
 
 ---
 
-##10/26（7日目）
+<h3>10/26（7日目）</h3>
 
 ---
 
@@ -259,12 +264,12 @@ author = "飴雨"
 
 ---
 
-![プレイ曲7日目_1](images/20201118_24.jpg)
-![プレイ曲7日目_2](images/20201118_25.jpg)
+![プレイ曲7日目_1](https://amemas.github.io/post/images/20201118_24.jpg)
+![プレイ曲7日目_2](https://amemas.github.io/post/images/20201118_25.jpg)
 
 7日目です。  
 今日はエレナの誕生日ですね。めでたい🎉
-![エレナの誕生日](images/20201118_26.jpg)
+![エレナの誕生日](https://amemas.github.io/post/images/20201118_26.jpg)
 
 
 　最終日前ということでアイテム「ぷっぷか☆プリン」を3倍消費したりして消費しきれないという事態をさけつつプレイしていきます。    
@@ -274,9 +279,9 @@ author = "飴雨"
 【おまけ】  
 イベランで疲れ切っているときにかわいいものを見ました。束の間の休息です。    
 混ぜてくれぃ
-![エントランスで水鉄砲はしてもいいです！_1](images/20201118_27.jpg)
-![エントランスで水鉄砲はしてもいいです！_2](images/20201118_28.jpg)
-![エントランスで水鉄砲はしてもいいです！_3](images/20201118_29.jpg)
+![エントランスで水鉄砲はしてもいいです！_1](https://amemas.github.io/post/images/20201118_27.jpg)
+![エントランスで水鉄砲はしてもいいです！_2](https://amemas.github.io/post/images/20201118_28.jpg)
+![エントランスで水鉄砲はしてもいいです！_3](https://amemas.github.io/post/images/20201118_29.jpg)
 
 ---
 
@@ -288,7 +293,7 @@ author = "飴雨"
 
 ---
 
-##10/27（8日目）
+<h3>10/27（8日目）</h3>
 
 ---
 
@@ -302,12 +307,12 @@ author = "飴雨"
 
 ---
 
-![プレイ曲8日目_1](images/20201118_30.jpg)
-![プレイ曲8日目_2](images/20201118_31.jpg)
-![プレイ曲8日目_3](images/20201118_32.jpg)
-![プレイ曲8日目_4](images/20201118_33.jpg)
-![プレイ曲8日目_5](images/20201118_34.jpg)
-![プレイ曲8日目_6](images/20201118_35.jpg)
+![プレイ曲8日目_1](https://amemas.github.io/post/images/20201118_30.jpg)
+![プレイ曲8日目_2](https://amemas.github.io/post/images/20201118_31.jpg)
+![プレイ曲8日目_3](https://amemas.github.io/post/images/20201118_32.jpg)
+![プレイ曲8日目_4](https://amemas.github.io/post/images/20201118_33.jpg)
+![プレイ曲8日目_5](https://amemas.github.io/post/images/20201118_34.jpg)
+![プレイ曲8日目_6](https://amemas.github.io/post/images/20201118_35.jpg)
 
 最終日です。  
 予想通り最後に慌てます。  
@@ -321,7 +326,7 @@ author = "飴雨"
 　この108曲目をプレイし終わった段階で20:07です。この時点で2503位とか、あと数人を抜けば2500位にランクイン出来るような順位でした。また、ミリシタのイベントランキングが更新されるのが大体この時間なのでこの順位が20時時点のランキングだと思い、109曲目をプレイします。  
 　プレイが終わって、一応もう一回順位を確認しておこうと思い、ランキング画面に行くと……
 
-# 2605位（20:00現在）
+<h2>2605位（20:00現在）</h2>
 
 ?!?!?!?!?!?!  
 かなり焦りました。先程の2503位とかいうのは19:30のランキングだったんですね。30分で100位の落下、他のPチャンの本気を見ました……  
@@ -347,7 +352,7 @@ author = "飴雨"
 
 ---
 
-#まとめ
+<h2>まとめ</h2>
 
 最終的なステータス、所持アイテムはこんな感じになりました。  
 
