--- a/content/post/2020_11_18.md
+++ b/content/post/2020_11_18.md
@@ -23,7 +23,7 @@ author = "飴雨"
 ---
 
 
-<h2>結果</h2>
+##結果
 
 ![イベント結果](https://amemas.github.io/post/images/20201118_2.jpg)
 
@@ -31,19 +31,19 @@ author = "飴雨"
 でも正直イベントが終わって、2500位に入れてないんじゃないかとヒヤヒヤしてたので一安心です。
 
 
-<h2>初期装備</h2>
+##初期装備
 
 ![所持アイテム1日目](https://amemas.github.io/post/images/20201118_3.jpg)
 
 　前回走ったイベントが今年の8月上旬に開催された「プラチナスターチューン〜BORN ON DREAM!〜」なので、そこから3ヶ月くらいでこれくらいのアイテムが溜まってました。  
 
-<h2>実際に走ってみた</h2>  
+##実際に走ってみた 
 
 プレイ曲数、難易度、曲名、その他の情報をメモしています。  
 太字の曲名はイベント曲で、赤字になっている曲は5倍が確定したときのイベント曲となっています。  
 「確定以外で×5.0倍ってこれくらいの確率で出るのか〜」的な見方をしてもらえると良いかと思います。
 
-<h3>10/20（1日目）</h3>  
+###10/20（1日目）
 
 ![プレイ曲1日目](https://amemas.github.io/post/images/20201118_4.jpg)
 9曲目をプレイしてるときに「次イベント走るときの参考に曲のプレイ数とかメモしておけばいいじゃん」って思ったので8曲目から上の情報がいろいろ曖昧です。プレイ数は消費した元気から逆算しました。  
@@ -55,7 +55,7 @@ author = "飴雨"
 
 ---
 
-<h3>10/21（2日目）</h3>
+###10/21（2日目）
 
 ---
 
@@ -91,7 +91,7 @@ author = "飴雨"
 ---
 
 
-<h3>10/22（3日目）</h3>
+###10/22（3日目）
 
 ---
 
@@ -117,7 +117,7 @@ author = "飴雨"
 
 ---
 
-<h3>10/23（4日目）</h3>
+###10/23（4日目）
 
 ---
 
@@ -142,7 +142,7 @@ author = "飴雨"
 
 ---
 
-<h3>10/24（5日目）</h3>
+###10/24（5日目）
 
 ---
 
@@ -170,7 +170,7 @@ author = "飴雨"
 
 ---
 
-<h3>10/25（6日目）</h3>
+###10/25（6日目）
 
 ---
 
@@ -249,7 +249,7 @@ author = "飴雨"
 
 ---
 
-<h3>10/26（7日目）</h3>
+###10/26（7日目）
 
 ---
 
@@ -293,7 +293,7 @@ author = "飴雨"
 
 ---
 
-<h3>10/27（8日目）</h3>
+###10/27（8日目）
 
 ---
 
@@ -326,7 +326,7 @@ author = "飴雨"
 　この108曲目をプレイし終わった段階で20:07です。この時点で2503位とか、あと数人を抜けば2500位にランクイン出来るような順位でした。また、ミリシタのイベントランキングが更新されるのが大体この時間なのでこの順位が20時時点のランキングだと思い、109曲目をプレイします。  
 　プレイが終わって、一応もう一回順位を確認しておこうと思い、ランキング画面に行くと……
 
-<h2>2605位（20:00現在）</h2>
+##2605位（20:00現在）
 
 ?!?!?!?!?!?!  
 かなり焦りました。先程の2503位とかいうのは19:30のランキングだったんですね。30分で100位の落下、他のPチャンの本気を見ました……  
@@ -352,7 +352,7 @@ author = "飴雨"
 
 ---
 
-<h2>まとめ</h2>
+##まとめ
 
 最終的なステータス、所持アイテムはこんな感じになりました。  
 
