--- a/content/post/2020_11_19.md
+++ b/content/post/2020_11_19.md
@@ -1,5 +1,5 @@
 +++
-title = "はじめまして、ブログはじめました"
+title = "THE VILLAIN'S NIGHTを頑張りたい"
 description = ""
 date = "2020-11-19T0:50:54+09:00"
 series = ["Hugo 101"]
