--- a/content/post/2020_11_19.md
+++ b/content/post/2020_11_19.md
@@ -88,7 +88,7 @@ author = "飴雨"
 
 ---
 
-イベントPt：？？
+イベントPt：？？  
 イベントPtランキング：？？
 
 獲得アイテム
@@ -113,7 +113,7 @@ author = "飴雨"
 
 ---
 
-イベントPt：3490Pt
+イベントPt：3490Pt  
 イベントPtランキング：63196位
 
 獲得アイテム
@@ -132,7 +132,7 @@ author = "飴雨"
 
 ---
 
-イベントPt：？？
+イベントPt：？？  
 イベントPtランキング：？？
 
 獲得アイテム
@@ -185,7 +185,7 @@ author = "飴雨"
 
 ---
 
-イベントPt：14166Pt
+イベントPt：14166Pt  
 イベントPtランキング：46239位
 
 獲得アイテム
@@ -207,7 +207,7 @@ author = "飴雨"
 
 ---
 
-イベントPt：？？
+イベントPt：？？  
 イベントPtランキング：？？
 
 獲得アイテム
@@ -224,7 +224,7 @@ author = "飴雨"
 最終日です。  
 　なんか急に走り出します。スケジュール管理がガバガバなような気がしますが、今回は裏でミリシタのイベントが26日まであったから仕方ないことなのです。決して、普段のイベントでも最終日に慌てて走っているわけではありません。ええ、決して。  
 
-　アイテム集めにGRANDでLIVEしたりもしました。ポイント効率てきにはPIANOもFORTEも変わらないのですが、時間効率的にはFORTEの方が良いので主にそっちで集め回りました。  
+　アイテム集めにGRANDでLIVEしたりもしました。ポイント効率的にはPIANOもFORTEも変わらないのですが、時間効率的にはFORTEの方が良いので主にそっちで集め回りました。  
 
 　マスターのフルコンに関しては、昨日まで左手で取ろうとしていたノーツが全て右手で取れることに気づいて運指を見直して頑張った結果、73曲目です。でかでかと書いていますがでかでかと書かせてください、54回目にしてなんとかフルコンすることができました！
 ![フルコン1](https://amemas.github.io/post/images/20201119_17.jpg)
