--- a/content/post/20210827.md
+++ b/content/post/20210827.md
@@ -12,3 +12,6 @@ author = "飴雨"
 いろいろ書きたいことはあるからブログ頑張って更新します。
 
 とりあえず今日はォ！めでとォ！！
+
+[追記8/28]
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">森の久保さんおめでとォ！<a href="https://twitter.com/hashtag/%E6%A3%AE%E4%B9%85%E4%BF%9D%E4%B9%83%E3%80%85?src=hash&amp;ref_src=twsrc%5Etfw">#森久保乃々</a><a href="https://twitter.com/hashtag/%E6%A3%AE%E4%B9%85%E4%BF%9D%E4%B9%83%E3%80%85%E8%AA%95%E7%94%9F%E7%A5%AD2021?src=hash&amp;ref_src=twsrc%5Etfw">#森久保乃々誕生祭2021</a> <a href="https://twitter.com/hashtag/%E6%A3%AE%E4%B9%85%E4%BF%9D%E4%B9%83%E3%80%85%E7%94%9F%E8%AA%95%E7%A5%AD2021?src=hash&amp;ref_src=twsrc%5Etfw">#森久保乃々生誕祭2021</a> <a href="https://t.co/YtA2RFkvJ4">pic.twitter.com/YtA2RFkvJ4</a></p>&mdash; 飴雨 (@amemasblog) <a href="https://twitter.com/amemasblog/status/1431238714936610817?ref_src=twsrc%5Etfw">August 27, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
